Connected backend to MongoDB database

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
 PORT = 4050
+mongoDB = mongodb+srv://Zubenna:Tombola%402023@zubycluster.p6j8x.mongodb.net/zonga?retryWrites=true&w=majority
+mongoLocal = mongodb://localhost:27017/zonga
+
+note Tombola@2023 was encoded.
